--- a/home.html
+++ b/home.html
@@ -49,7 +49,6 @@
 </div>
 <!-- End of Navigation Bar -->
 
-
 <!-- Welcome Section -->
 <section id="welcome" class="parallax welcome-section photo-section dark-section light-content parallax">
 	<div class="bg-overlay"></div>
@@ -134,13 +133,13 @@
 				<div class="team-member">
 					<div class="profile-picture">
 						<figure><img src="assets/mikeD.jpg"></figure>
-						<div class="profile-overlay"></div>
+<!-- 						<div class="profile-overlay"></div>
 						<div class="profile-social">
 							<div class="icons-wrapper">
 								<a href="#"><i class="fa fa-linkedin"></i></a>
 								<a href="#"><i class="fa fa-github"></i></a>
 							</div>
-						</div>
+						</div> -->
 					</div>
 					<h3><a href="#">Mike Duval</a></h3>
 					<span>Full-Stack Developer</span><br>
