--- a/home.html
+++ b/home.html
@@ -250,6 +250,9 @@
 						<textarea class="form-control" rows="7" name="message" placeholder="Message"></textarea>
 					</div>
 					<div class="form-group">
+						<input type="text" class="form-control input-lg" id="humaninput" placeholder="5 + 2 =" name="human">
+					</div>
+					<div class="form-group">
 						<button id="submit_btn" type="submit" class="btn btn-outline-white btn-big">Submit</button>
 					</div>
 				</form>
