email fix attempt

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
 				<div id="result"></div>
 
-				<form id="contact_form" class="contact-form" action="/contact.php" method="post">
+				<form id="contact_form" class="contact-form" action="contact.php" method="post">
 					<div class="row">
 						<div class="col-md-6">
 							<div class="form-group">
