--- a/index.html
+++ b/index.html
@@ -204,24 +204,24 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<h1 class="special-heading dark-special">Drop me a line</h1>
-				<p class="section-description">I love what I do and I'm looking to connect with others who feel the same way.</p>
+				<p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, facilis, id, maiores tempore adipisci a corporis magni fugiat facere quo dolor.</p>
 				<div class="row contact-informations">
 					<div class="col-sm-4">
 						<div class="contact-info clearfix">
-							<img src="assets/home.jpg" style="height: 60px; padding-right: 10px; font-size:.8em;">
-							<span style="text-align: center;">17200 Burbank Blvd., #255<br>Encino, CA<br>91316</span>
+							<i class="fa fa-map-marker"></i>
+							<span>Freedom Street, 245<br>Amsterdam</span>
 						</div>
 					</div>
 					<div class="col-sm-4">
 						<div class="contact-info clearfix">
-							<img src="assets/email.jpg" style="height: 60px; padding-right: 10px;">
-							<span>mikeduval42@gmail.com</span>
+							<i class="fa fa-envelope"></i>
+							<span>contact@mysite.com</span>
 						</div>
 					</div>
 					<div class="col-sm-4">
 						<div class="contact-info clearfix">
-							<img src="assets/phone.jpg" style="height: 55px; ">
-							<span>(805) 340-7031</span>
+							<i class="fa fa-phone"></i>
+							<span>235 214 2326</span>
 						</div>
 					</div>
 				</div>
@@ -247,7 +247,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<textarea class="form-control" rows="7" name="message" placeholder="Message"></textarea>
+						<textarea class="form-control" rows="10" name="message" placeholder="Message"></textarea>
 					</div>
 					<div class="form-group">
 						<input type="text" class="form-control input-lg" id="humaninput" placeholder="5 + 2 =" name="human">
