linkedin url fixed

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<h3><a href="#">Mike Duval</a></h3>
 					<span>Full-Stack Developer</span><br>
 					<span>
-						<a href="www.linkedin.com/in/mikekduval/"><img src="assets/linkedin.jpg" style="height:25px;"></a>
+						<a href="https://www.linkedin.com/in/mikekduval"><img src="assets/linkedin.jpg" style="height:25px;"></a>
 						<a href="https://github.com/mikeduval42"><img src="assets/github.jpg" style="height:25px;"></a>
 					</span>
 				</div>
@@ -277,7 +277,7 @@
 			<h2>Mike Duval</h2>
 				<p>Full-Stack Developer</p>
 				<div class="social-icons light-icons">
-					<a href="www.linkedin.com/in/mikekduval/"><img src="assets/linkedin.jpg" style="height:25px;"></a>
+					<a href="https://www.linkedin.com/in/mikekduval"><img src="assets/linkedin.jpg" style="height:25px;"></a>
 					<a href="https://github.com/mikeduval42"><img src="assets/github.jpg" style="height:25px;"></a>
 				</div>
 		</div>
