--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css" />
 
+
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -83,7 +84,7 @@
 		<div class="main">
 			<ul id="og-grid" class="og-grid">
 				<li class="portfolio-item visible-item">
-					<a href="https://truegood.herokuapp.com" data-largesrc="assets/truegood.jpg" data-title="trueGood" data-description="TrueGood is an app that allows individuals or groups to volunteer to do jobs for the elderly or disabled who might not be able to perform certain tasks. Whether it is a household chore like mowing the lawn, household repairs like fixing a leaky sink, or taking a dog for its daily walk, trueGood aims to make life  alittle easier for those who need it most.">
+					<a href="http://truegood.herokuapp.com" data-largesrc="assets/truegood.jpg" data-title="trueGood" data-description="TrueGood is an app that allows individuals or groups to volunteer to do jobs for the elderly or disabled who might not be able to perform certain tasks. Whether it is a household chore like mowing the lawn, household repairs like fixing a leaky sink, or taking a dog for its daily walk, trueGood aims to make life a little easier for those who need it most.">
 						<img src="assets/truegood.jpg" alt="TrueGood"/>
 						<div class="overlay-content">
 							<h4>trueGood</h4>
@@ -92,7 +93,7 @@
 					</a>
 				</li>
 				<li class="portfolio-item visible-item">
-					<a href="https://multimediawikipedia.herokuapp.com" data-largesrc="assets/mmw.jpg" data-title="Multimedia Wikipedia" data-description="<p>Frustrated with Wikipedia's limited search results? Do you want more then just articles on a topic to help you with a paper or to learn more about a topic? Multimedia Wikipedia takes your search results and returns the Wikiepdia article, top Google images, and top Youtube videos for your search results. Utilizes: Wikipedia API, Google Images API, and Youtube API.">
+					<a href="http://multimediawikipedia.herokuapp.com" data-largesrc="assets/mmw.jpg" data-title="Multimedia Wikipedia" data-description="<p>Frustrated with Wikipedia's limited search results? Do you want more then just articles on a topic to help you with a paper or to learn more about a topic? Multimedia Wikipedia takes your search results and returns the Wikiepdia article, top Google images, and top Youtube videos for your search results. Utilizes: Freebase API, Google Images API, and Youtube API.">
 						<img src="assets/mmw.jpg" alt="Multimedia Wikipedia"/>
 						<div class="overlay-content">
 							<h4>Multimedia Wikipedia</h4>
@@ -101,7 +102,7 @@
 					</a>
 				</li>
 				<li class="portfolio-item visible-item">
-					<a href="https://encinofarmersmarket.herokuapp.com" data-largesrc="assets/fma.jpg" data-title="Farmer's Market App" data-description="Ever wondered what products vendors at your local farmer's market will be bringing with them this week? Farmer's Market App allows vendors to connect with their customers and notify them what products they will be bringing with them that week.">
+					<a href="http://encinofarmersmarket.herokuapp.com" data-largesrc="assets/fma.jpg" data-title="Farmer's Market App" data-description="Ever wondered what products vendors at your local farmer's market will be bringing with them this week? Farmer's Market App allows vendors to connect with their customers and notify them what products they will be bringing with them that week.">
 						<img src="assets/fma.jpg" alt="Farmers Market App"/>
 						<div class="overlay-content">
 							<h4>Farmer's Market App</h4>
@@ -110,7 +111,7 @@
 					</a>
 				</li>
 				<li class="portfolio-item visible-item">
-					<a href="https://tictacchucknorris.firebaseapp.com" data-largesrc="assets/ttcn.jpg" data-title="TicTacChuckNorris" data-description="<p>A spin on the classic Tic Tac Toe game. In TicTacChuckNorris, it's Chuck Norris vs. the World. Will Chuck Norris win in his battle against the world, or will the World prevail? TicTacChuckNorris will settle this battle for ultimate supremacy.</p>">
+					<a href="http://tictacchucknorris.firebaseapp.com" data-largesrc="assets/ttcn.jpg" data-title="TicTacChuckNorris" data-description="<p>A spin on the classic Tic Tac Toe game. In TicTacChuckNorris, it's Chuck Norris vs. the World. Will Chuck Norris win in his battle against the world, or will the World prevail? TicTacChuckNorris will settle this battle for ultimate supremacy.</p>">
 						<img src="assets/ttcn.jpg" alt="TicTacChuckNorris"/>
 						<div class="overlay-content">
 							<h4>TicTacChuckNorris</h4>
@@ -144,8 +145,8 @@
 					<h3><a href="#">Mike Duval</a></h3>
 					<span>Full-Stack Developer</span><br>
 					<span>
-						<a href="https://www.linkedin.com/in/mikekduval"><img src="assets/linkedin.jpg" style="height:25px;"></a>
-						<a href="https://github.com/mikeduval42"><img src="assets/github.jpg" style="height:25px;"></a>
+						<a href="http://www.linkedin.com/in/mikekduval"><img src="assets/linkedin.jpg" style="height:25px;"></a>
+						<a href="http://github.com/mikeduval42"><img src="assets/github.jpg" style="height:25px;"></a>
 					</span>
 				</div>
 			</div>
@@ -277,7 +278,7 @@
 			<h2>Mike Duval</h2>
 				<p>Full-Stack Developer</p>
 				<div class="social-icons light-icons">
-					<a href="https://www.linkedin.com/in/mikekduval"><img src="assets/linkedin.jpg" style="height:25px;"></a>
+					<a href="http://www.linkedin.com/in/mikekduval"><img src="assets/linkedin.jpg" style="height:25px;"></a>
 					<a href="https://github.com/mikeduval42"><img src="assets/github.jpg" style="height:25px;"></a>
 				</div>
 		</div>
