update portfolio page with more recent info, removed some non-relevant sections

--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
 		<nav id="my-nav" class="navbar-collapse collapse" role="navigation">
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="#welcome">Home</a></li>
-				<li><a href="#portfolio">Portfolio</a></li>
 				<li><a href="#team">About Me</a></li>
-				<li><a href="#services">My Skills</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav><!--/.navbar-collapse -->
@@ -58,7 +56,7 @@
 			<div class="welcome-content">
 				<h1 class="special-heading light-special">Hi, I am Mike Duval... </h1>
 				<p>
-					<span class="rotating-words"> A JR. FULL-STACK DEVELOPER, A LOVER OF TECHNOLOGY, A WORLD TRAVELER</span>
+					<span id="subHeading"> AN IMPLEMENTATION ENGINEERING MANAGER WHO IS PASSIONATE ABOUT EMPOWERING CUSTOMERS AND MY TEAM TO ACHIEVE THEIR GOALS</span>
 				</p>
 				<div class="scroll-more">
 					<span>Scroll down</span>
@@ -72,7 +70,7 @@
 
 
 <!-- Portfolio Section -->
-<section id="portfolio" class="portfolio-section light-section dark-content" style="background-image:url('assets/greytexture.jpg');">
+<!--<section id="portfolio" class="portfolio-section light-section dark-content" style="background-image:url('assets/greytexture.jpg');">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
@@ -122,9 +120,9 @@
 			</ul>
 		</div>
 	</div>
-</section>
+</section> -->
 
-<!-- Team Section -->
+<!-- About Me Section -->
 <section id="team" class="team-section light-section dark-content">
 	<div class="container">
 		<h1 class="special-heading dark-special">About Me</h1>
@@ -152,16 +150,16 @@
 			</div>
 			<div class="team-member">
 					<div style="margin: 40px 0 10px; font-size: 18px;">
-						<p>I am a junior full-stack developer and recent graduate of the Web Development Immersive program at General Assembly in Santa Monica. I earned an MA and BA in history from San Diego State University with an emphasis in historical research. My desire to discover, learn, and building projects from scratch led me to the development field, and I am excited about contributing to your team.</p>
+						<p>I am a Implementation Engineering Manager with seven years of experience leading technical implementations of SaaS products for enterprise and mid-market companies. Experienced in guiding clients through the entire implementation lifecycle from kickoff call to post launch support. Thrives in fast-paced, collaborative, team-oriented environments that are committed to furthering relationships with clients and enabling their success. Focused on providing leadership, mentorship, and coaching to team members that empowers their professional development and growth. </p>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
-<!-- End of Team Section -->
+<!-- End of Abot Me Section -->
 
-<!-- Services Section -->
-<section id="services" class="parallax services-section photo-section dark-section light-content" style="background-image:url('assets/greytexture.jpg');">
+<!-- Skills Section -->
+<!-- <section id="services" class="parallax services-section photo-section dark-section light-content" style="background-image:url('assets/greytexture.jpg');">
 	<div class="bg-overlay"></div>
 	<div class="container">
 		<h1 class="special-heading light-specialcustom">MY SKILLS</h1>
@@ -196,7 +194,7 @@
 		</div>
 
 	</div>
-</section>
+</section> -->
 <!-- End of Services Section -->
 
 <!-- Contact Section -->
@@ -204,13 +202,13 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="special-heading dark-special">Drop me a line</h1>
+				<h1 class="special-heading dark-special">Let's Connect!!!</h1>
 				<p class="section-description">I love what I do and I'm looking to connect with others who feel the same way.</p>
 				<div class="row contact-informations">
 					<div class="col-sm-4">
 						<div class="contact-info clearfix">
 							<img src="assets/home.jpg" style="height: 60px; padding-right: 10px; font-size:.8em;">
-							<span style="text-align: center;">17200 Burbank Blvd., #255<br>Encino, CA<br>91316</span>
+							<span style="text-align: center;">Ventura, CA</span>
 						</div>
 					</div>
 					<div class="col-sm-4">
@@ -284,7 +282,7 @@
 		</div>
 		<div id="leftfooter">
 			<h2>Who Am I?</h2>
-				<p>Mike Duval is a full-stack jr. developer with experiencing using Ruby on Rails, JavaScript, AngularJS, HTML5, and CSS3.</p>
+				<p>Mike Duval is an Implementation Engineering Manager with seven years of experience leading technical implementations of SaaS products for enterprise and mid-market companies.</p>
 		</div>
 	</div>
 </footer>
