Update for homework assignment
Add ld img, add div on html for image, and styling to img

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 				<p>
 					<span id="subHeading"> AN IMPLEMENTATION ENGINEERING MANAGER WHO IS PASSIONATE ABOUT EMPOWERING CUSTOMERS AND MY TEAM TO ACHIEVE THEIR GOALS</span>
 				</p>
+				<div id="ld-logo">
+				<img src="assets/ld-logo.png" alt="LaunchDarkly"/>
+				</div>
 				<div class="scroll-more">
 					<span>Scroll down</span>
 					<i class="scroll-arrow"></i>
