CSS and typo updates
-Update CSS for one section to create border
-Update typo

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 						</div> -->
 					</div>
 					<h3><a href="#">Mike Duval</a></h3>
-					<span>Full-Stack Developer</span><br>
+					<span>Impl. Engineering Manager</span><br>
 					<span>
 						<a href="http://www.linkedin.com/in/mikekduval"><img src="assets/linkedin.jpg" style="height:25px;"></a>
 						<a href="http://github.com/mikeduval42"><img src="assets/github.jpg" style="height:25px;"></a>
