--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 	<div class="container">
 		<div id="rightfooter">
 			<h2>Mike Duval</h2>
-				<p>Full-Stack Developer</p>
+				<p>Immp. Engineering Manager</p>
 				<div class="social-icons light-icons">
 					<a href="http://www.linkedin.com/in/mikekduval"><img src="assets/linkedin.jpg" style="height:25px;"></a>
 					<a href="https://github.com/mikeduval42"><img src="assets/github.jpg" style="height:25px;"></a>
