--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" >
 
-	<title>Mike Duval Portfolio</title>
+	<title>Mike Duval's Portfolio</title>
 
 	<link href="favicon.ico" rel="icon" type="image/x-icon" />
 	<link rel="stylesheet" href="css/bootstrap.css" />
