--- a/index.html
+++ b/index.html
@@ -11,11 +11,41 @@
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css" />
-
+	
+	<!-- Use LaunchDarkly sdk -->
+    <script src="https://unpkg.com/launchdarkly-js-client-sdk@2"></script>
 </head>
 
 
 <body data-spy="scroll" data-target="#my-nav">
+
+	<!-- LaunchDarkly script -->
+    <script>
+      // Set up the user properties. This user should appear on your LaunchDarkly users dashboard
+      // soon after you run the demo.
+      var user = {
+        name: 'Bob Loblaw',
+        key: 'example-user-key',
+      };
+
+      var div = document.createElement('div');
+      document.body.appendChild(div);
+
+      div.appendChild(document.createTextNode('Initializing...'));
+
+      // Create a new LDClient instance with your environment-specific SDK key
+      var ldclient = LDClient.initialize('627499d145da2415463e965a', user);
+
+      function render() {
+        var flagValue = ldclient.variation('LD-Logo', false);
+        var label = (flagValue ? 'Showing' : 'Not showing') + ' your feature to ' + user.key;
+        console.log("SDK successfully connected! The value of LD-Logo is " + flagValue + " for " + user.key)
+        div.replaceChild(document.createTextNode(label), div.firstChild);
+      }
+
+      ldclient.on('ready', render);
+      ldclient.on('change', render);
+    </script>
 
 <!-- Navigation Bar -->
 <div class="navbar navbar-fixed-top">
