rollback last change

--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
       // Set up the user properties. This user should appear on your LaunchDarkly users dashboard
       // soon after you run the demo.
       var user = {
-        //name: 'Bob Loblaw',
-        //key: 'example-user-key',
-		 key: "anon",
-		 anonymous: True,
+        name: 'Bob Loblaw',
+        key: 'example-user-key',
       };
 
       var div = document.createElement('div');
