typo in JS to toggle img

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         div.replaceChild(document.createTextNode(label), div.firstChild);
 		  function toggle(){
 			var x = document.getElementByID("ld-logo");
-			if (flagValue = false) {
+			if (flagValue == false) {
 				
 				x.style.display="none";}
 		  }
