--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         console.log("SDK successfully connected! The value of LD-Logo is " + flagValue + " for " + user.key)
         div.replaceChild(document.createTextNode(label), div.firstChild);
 
-		var x = document.getElementByID("ld-logo");
+		var x = document.getElementById("ld-logo");
 		if (flagValue == false) {
 			x.style.display="none";
 			}
