add additional file

--- a/false.html
+++ b/false.html
@@ -23,6 +23,8 @@
     <script>
       // Set up the user properties. This user should appear on your LaunchDarkly users dashboard
       // soon after you run the demo.
+	  
+	  //setting up another user to split targetting
       var user = {
         name: 'Mike False',
         key: 'example-user-key2',
